<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    tools:context=".MainActivity">

<!--    Judul-->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/title"
        android:textColor="@color/navy"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
<!--Operasi-->
    <TextView
        android:id="@+id/operasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/operasi"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.897"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />
<!--Hasil-->
    <TextView
        android:id="@+id/hasil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/hasil"
        android:textSize="36sp"
        android:textColor="@color/hasil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.883"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/operasi" />
<!--    Garis-->
    <ImageView
        android:id="@+id/garis"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/hasil"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

<!--    Guide-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <!--    Tombol-->
    <android.widget.Button
        android:id="@+id/button7"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/background"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/Angka7"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="@id/guide1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/garis"/>

    <android.widget.Button
        android:id="@+id/button4"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/background"
        android:fontFamily="@font/poppinsregular"
        android:text="4"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@id/guide1"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button7"
        tools:ignore="MissingConstraints" />

    <android.widget.Button
        android:id="@+id/button1"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/background"
        android:fontFamily="@font/poppinsregular"
        android:text="1"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@id/guide1"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button4"
        tools:ignore="MissingConstraints" />

    <android.widget.Button
        android:id="@+id/button0"
        android:layout_width="210dp"
        android:layout_height="90dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/background"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/Angka0"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@id/guide2"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button2"
        tools:ignore="MissingConstraints" />

    <!--    Guide 2-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        tools:ignore="DuplicateIds" />

    <android.widget.Button
        android:id="@+id/button8"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/background"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/Angka8"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@id/guide2"
        app:layout_constraintStart_toEndOf="@id/button7"
        app:layout_constraintTop_toTopOf="@id/button7"
        tools:ignore="MissingConstraints" />

    <android.widget.Button
        android:id="@+id/button5"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/background"
        android:fontFamily="@font/poppinsregular"
        android:text="5"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@id/guide2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button8"
        tools:ignore="MissingConstraints" />

    <android.widget.Button
        android:id="@+id/button2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/background"
        android:fontFamily="@font/poppinsregular"
        android:text="2"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@id/guide2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button5"
        tools:ignore="MissingConstraints" />

<!--    Guide 3-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75"
        tools:ignore="DuplicateIds" />
<!--    Button 8-->
    <android.widget.Button
        android:id="@+id/button9"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/background"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/Angka9"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@id/guide3"
        app:layout_constraintStart_toEndOf="@id/button8"
        app:layout_constraintTop_toTopOf="@id/button8"
        tools:ignore="MissingConstraints" />
<!--    Button6-->
    <android.widget.Button
        android:id="@+id/button6"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/background"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/Angka6"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@id/guide3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button9"
        tools:ignore="MissingConstraints" />
    <!--    Button3-->
    <android.widget.Button
        android:id="@+id/button3"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/background"
        android:fontFamily="@font/poppinsregular"
        android:text="3"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@id/guide3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button6"
        tools:ignore="MissingConstraints" />
<!--Button x-->
    <android.widget.Button
        android:id="@+id/buttonX"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/background"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/simbol2"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@id/guide3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button3"
        tools:ignore="MissingConstraints" />

<!--    Guide4-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1" />
<!--Button +-->
    <android.widget.Button
        android:id="@+id/buttonplus"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/background"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/simbol1"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@id/guide4"
        app:layout_constraintStart_toEndOf="@id/button9"
        app:layout_constraintTop_toTopOf="@id/button9"
        tools:ignore="MissingConstraints" />
<!--    Button - -->
    <android.widget.Button
        android:id="@+id/buttonminus"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/background"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/simbol3"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@id/guide4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonplus"
        tools:ignore="MissingConstraints" />
<!--    Button /-->
    <android.widget.Button
        android:id="@+id/buttonbagi"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/background"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/simbol4"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@id/guide4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonminus"
        tools:ignore="MissingConstraints" />
<!--    Button =-->
    <android.widget.Button
        android:id="@+id/buttonSamadng"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/background"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/simbol5"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@id/guide4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonbagi"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>